--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,17 +9,95 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">16</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">40,077</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">15</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">21,248</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_01_PostMethods</td><td><a href="#m0">createData</a></td><td rowspan="1">1588776668766</td><td rowspan="1">3355</td></tr><tr class="passedodd"><td rowspan="2">com.API_Testing.TestScripts.TC_02_GetPerticulerIddata</td><td><a href="#m1">createData</a></td><td rowspan="1">1588776708409</td><td rowspan="1">45</td></tr><tr class="passedodd"><td><a href="#m2">getIDData</a></td><td rowspan="1">1588776708456</td><td rowspan="1">31</td></tr><tr class="passedeven"><td rowspan="2">com.API_Testing.TestScripts.TC_03_PUTRequest</td><td><a href="#m3">createData</a></td><td rowspan="1">1588776672176</td><td rowspan="1">56</td></tr><tr class="passedeven"><td><a href="#m4">updateRecord</a></td><td rowspan="1">1588776672236</td><td rowspan="1">57</td></tr><tr class="passedodd"><td rowspan="2">com.API_Testing.TestScripts.TC_04_PatchRequest</td><td><a href="#m5">createData</a></td><td rowspan="1">1588776708640</td><td rowspan="1">37</td></tr><tr class="passedodd"><td><a href="#m6">updateSpecificData</a></td><td rowspan="1">1588776708686</td><td rowspan="1">37</td></tr><tr class="passedeven"><td rowspan="2">com.API_Testing.TestScripts.TC_05_DeleteRequestData</td><td><a href="#m7">createData</a></td><td rowspan="1">1588776708492</td><td rowspan="1">53</td></tr><tr class="passedeven"><td><a href="#m8">deleteData</a></td><td rowspan="1">1588776708548</td><td rowspan="1">46</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_06_GetALLData</td><td><a href="#m9">getAllRecords</a></td><td rowspan="1">1588776705139</td><td rowspan="1">56</td></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles</td><td><a href="#m10">replaceVarialbes</a></td><td rowspan="1">1588776672295</td><td rowspan="1">32837</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_08_GetDatabyKey</td><td><a href="#m11">fetchValuedata</a></td><td rowspan="1">1588776672165</td><td rowspan="1">4</td></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_09CompareJSonTwoFile</td><td><a href="#m12">comparetoJson</a></td><td rowspan="1">1588776708726</td><td rowspan="1">19</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_10_PostDataUsingPojo</td><td><a href="#m13">pojoPostTest</a></td><td rowspan="1">1588776672127</td><td rowspan="1">34</td></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_11_AddValueInExsitingData</td><td><a href="#m14">addValueExsitingData</a></td><td rowspan="1">1588776668732</td><td rowspan="1">22</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_12_CheckGitHubServer</td><td><a href="#m15">generateRecordOnGitServer</a></td><td rowspan="1">1588776705198</td><td rowspan="1">3205</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_04_PatchRequest</td><td><a href="#m0">updateSpecificData</a></td><td rowspan="1">1588777256593</td><td rowspan="1">53</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_01_PostMethods</td><td><a href="#m1">createData</a></td><td rowspan="1">1588777235506</td><td rowspan="1">2770</td></tr><tr class="passedodd"><td rowspan="2">com.API_Testing.TestScripts.TC_02_GetPerticulerIddata</td><td><a href="#m2">createData</a></td><td rowspan="1">1588777256379</td><td rowspan="1">42</td></tr><tr class="passedodd"><td><a href="#m3">getIDData</a></td><td rowspan="1">1588777256426</td><td rowspan="1">40</td></tr><tr class="passedeven"><td rowspan="2">com.API_Testing.TestScripts.TC_03_PUTRequest</td><td><a href="#m4">createData</a></td><td rowspan="1">1588777238324</td><td rowspan="1">49</td></tr><tr class="passedeven"><td><a href="#m5">updateRecord</a></td><td rowspan="1">1588777238386</td><td rowspan="1">52</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_04_PatchRequest</td><td><a href="#m6">createData</a></td><td rowspan="1">1588777256549</td><td rowspan="1">41</td></tr><tr class="passedeven"><td rowspan="2">com.API_Testing.TestScripts.TC_05_DeleteRequestData</td><td><a href="#m7">createData</a></td><td rowspan="1">1588777256470</td><td rowspan="1">44</td></tr><tr class="passedeven"><td><a href="#m8">deleteData</a></td><td rowspan="1">1588777256517</td><td rowspan="1">29</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_06_GetALLData</td><td><a href="#m9">getAllRecords</a></td><td rowspan="1">1588777252887</td><td rowspan="1">47</td></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles</td><td><a href="#m10">replaceVarialbes</a></td><td rowspan="1">1588777238442</td><td rowspan="1">14438</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_08_GetDatabyKey</td><td><a href="#m11">fetchValuedata</a></td><td rowspan="1">1588777238314</td><td rowspan="1">4</td></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_09CompareJSonTwoFile</td><td><a href="#m12">comparetoJson</a></td><td rowspan="1">1588777256654</td><td rowspan="1">15</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_10_PostDataUsingPojo</td><td><a href="#m13">pojoPostTest</a></td><td rowspan="1">1588777238281</td><td rowspan="1">28</td></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_11_AddValueInExsitingData</td><td><a href="#m14">addValueExsitingData</a></td><td rowspan="1">1588777235470</td><td rowspan="1">25</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_12_CheckGitHubServer</td><td><a href="#m15">generateRecordOnGitServer</a></td><td rowspan="1">1588777252937</td><td rowspan="1">3436</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.API_Testing.TestScripts.TC_01_PostMethods#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.API_Testing.TestScripts.TC_02_GetPerticulerIddata#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.API_Testing.TestScripts.TC_02_GetPerticulerIddata#getIDData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.API_Testing.TestScripts.TC_03_PUTRequest#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.API_Testing.TestScripts.TC_03_PUTRequest#updateRecord</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.API_Testing.TestScripts.TC_04_PatchRequest#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.API_Testing.TestScripts.TC_04_PatchRequest#updateSpecificData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.API_Testing.TestScripts.TC_04_PatchRequest#updateSpecificData</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.net.SocketException: Connection reset
+	at java.net.SocketInputStream.read(Unknown Source)
+	at java.net.SocketInputStream.read(Unknown Source)
+	at org.apache.http.impl.io.AbstractSessionInputBuffer.fillBuffer(AbstractSessionInputBuffer.java:158)
+	at org.apache.http.impl.io.SocketInputBuffer.fillBuffer(SocketInputBuffer.java:82)
+	at org.apache.http.impl.io.AbstractSessionInputBuffer.readLine(AbstractSessionInputBuffer.java:271)
+	at org.apache.http.impl.conn.DefaultHttpResponseParser.parseHead(DefaultHttpResponseParser.java:138)
+	at org.apache.http.impl.conn.DefaultHttpResponseParser.parseHead(DefaultHttpResponseParser.java:56)
+	at org.apache.http.impl.io.AbstractMessageParser.parse(AbstractMessageParser.java:259)
+	at org.apache.http.impl.AbstractHttpClientConnection.receiveResponseHeader(AbstractHttpClientConnection.java:281)
+	at org.apache.http.impl.conn.DefaultClientConnection.receiveResponseHeader(DefaultClientConnection.java:257)
+	at org.apache.http.impl.conn.ManagedClientConnectionImpl.receiveResponseHeader(ManagedClientConnectionImpl.java:207)
+	at org.apache.http.protocol.HttpRequestExecutor.doReceiveResponse(HttpRequestExecutor.java:273)
+	at org.apache.http.protocol.HttpRequestExecutor.execute(HttpRequestExecutor.java:125)
+	at org.apache.http.impl.client.DefaultRequestDirector.tryExecute(DefaultRequestDirector.java:684)
+	at org.apache.http.impl.client.DefaultRequestDirector.execute(DefaultRequestDirector.java:486)
+	at org.apache.http.impl.client.AbstractHttpClient.doExecute(AbstractHttpClient.java:835)
+	at org.apache.http.impl.client.CloseableHttpClient.execute(CloseableHttpClient.java:83)
+	at org.apache.http.impl.client.CloseableHttpClient.execute(CloseableHttpClient.java:56)
+	at org.apache.http.client.HttpClient$execute$0.call(Unknown Source)
+	at org.codehaus.groovy.runtime.callsite.CallSiteArray.defaultCall(CallSiteArray.java:47)
+	at org.apache.http.client.HttpClient$execute$0.call(Unknown Source)
+	at io.restassured.internal.RequestSpecificationImpl$RestAssuredHttpBuilder.doRequest(RequestSpecificationImpl.groovy:2055)
+	at io.restassured.internal.http.HTTPBuilder.doRequest(HTTPBuilder.java:494)
+	at io.restassured.internal.http.HTTPBuilder.request(HTTPBuilder.java:451)
+	at io.restassured.internal.http.HTTPBuilder$request$3.call(Unknown Source)
+	at io.restassured.internal.RequestSpecificationImpl.sendHttpRequest(RequestSpecificationImpl.groovy:1450)
+	at groovy.lang.MetaMethod.doMethodInvoke(MetaMethod.java:323)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:1217)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:1041)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:821)
+	at io.restassured.internal.RequestSpecificationImpl.invokeMethod(RequestSpecificationImpl.groovy)
+	at org.codehaus.groovy.runtime.callsite.PogoInterceptableSite.call(PogoInterceptableSite.java:45)
+	at org.codehaus.groovy.runtime.callsite.PogoInterceptableSite.callCurrent(PogoInterceptableSite.java:55)
+	at io.restassured.internal.RequestSpecificationImpl.sendRequest(RequestSpecificationImpl.groovy:1199)
+	at groovy.lang.MetaMethod.doMethodInvoke(MetaMethod.java:323)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:1217)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:1041)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:821)
+	at io.restassured.internal.RequestSpecificationImpl.invokeMethod(RequestSpecificationImpl.groovy)
+	at org.codehaus.groovy.runtime.callsite.PogoInterceptableSite.call(PogoInterceptableSite.java:45)
+	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.call(AbstractCallSite.java:151)
+	at io.restassured.internal.filter.SendRequestFilter.filter(SendRequestFilter.groovy:30)
+	at io.restassured.filter.Filter$filter$0.call(Unknown Source)
+	at org.codehaus.groovy.runtime.callsite.CallSiteArray.defaultCall(CallSiteArray.java:47)
+	at io.restassured.filter.Filter$filter.call(Unknown Source)
+	at io.restassured.internal.filter.FilterContextImpl.next(FilterContextImpl.groovy:72)
+	at io.restassured.filter.time.TimingFilter.filter(TimingFilter.java:56)
+	at io.restassured.filter.Filter$filter.call(Unknown Source)
+	at org.codehaus.groovy.runtime.callsite.CallSiteArray.defaultCall(CallSiteArray.java:47)
+	at io.restassured.filter.Filter$filter$0.call(Unknown Source)
+	at io.restassured.internal.filter.FilterContextImpl.next(FilterContextImpl.groovy:72)
+	at io.restassured.filter.FilterContext$next.call(Unknown Source)
+	at io.restassured.internal.RequestSpecificationImpl.applyPathParamsAndSendRequest(RequestSpecificationImpl.groovy:1655)
+	at groovy.lang.MetaMethod.doMethodInvoke(MetaMethod.java:323)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:1217)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:1041)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:821)
+	at io.restassured.internal.RequestSpecificationImpl.invokeMethod(RequestSpecificationImpl.groovy)
+	at org.codehaus.groovy.runtime.callsite.PogoInterceptableSite.call(PogoInterceptableSite.java:45)
+	at org.codehaus.groovy.runtime.callsite.PogoInterceptableSite.callCurrent(PogoInterceptableSite.java:55)
+	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callCurrent(AbstractCallSite.java:184)
+	at io.restassured.internal.RequestSpecificationImpl.applyPathParamsAndSendRequest(RequestSpecificationImpl.groovy:1661)
+	at groovy.lang.MetaMethod.doMethodInvoke(MetaMethod.java:323)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:1217)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:1041)
+	at groovy.lang.MetaClassImpl.invokeMethod(MetaClassImpl.java:821)
+	at io.restassured.internal.RequestSpecificationImpl.invokeMethod(RequestSpecificationImpl.groovy)
+	at org.codehaus.groovy.runtime.callsite.PogoInterceptableSite.call(PogoInterceptableSite.java:45)
+	at org.codehaus.groovy.runtime.callsite.PogoInterceptableSite.callCurrent(PogoInterceptableSite.java:55)
+	at org.codehaus.groovy.runtime.callsite.CallSiteArray.defaultCallCurrent(CallSiteArray.java:51)
+	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callCurrent(AbstractCallSite.java:156)
+	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callCurrent(AbstractCallSite.java:184)
+	at io.restassured.internal.RequestSpecificationImpl.patch(RequestSpecificationImpl.groovy:191)
+	at io.restassured.internal.RequestSpecificationImpl.patch(RequestSpecificationImpl.groovy)
+	at com.API_Testing.TestStep_HTTP_Methods.HTTP_Methods.patch_UpdateData(HTTP_Methods.java:89)
+	at com.API_Testing.TestScripts.TC_04_PatchRequest.updateSpecificData(TC_04_PatchRequest.java:35)
+	at java.util.ArrayList.forEach(Unknown Source)
+... Removed 47 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.API_Testing.TestScripts.TC_01_PostMethods#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.API_Testing.TestScripts.TC_02_GetPerticulerIddata#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.API_Testing.TestScripts.TC_02_GetPerticulerIddata#getIDData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.API_Testing.TestScripts.TC_03_PUTRequest#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.API_Testing.TestScripts.TC_03_PUTRequest#updateRecord</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.API_Testing.TestScripts.TC_04_PatchRequest#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m7">com.API_Testing.TestScripts.TC_05_DeleteRequestData#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m8">com.API_Testing.TestScripts.TC_05_DeleteRequestData#deleteData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m9">com.API_Testing.TestScripts.TC_06_GetALLData#getAllRecords</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
