--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>getIDData</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>updateRecord</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -245,6 +249,14 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>getIDData</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>updateRecord</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>updateSpecificData</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -256,6 +268,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>jsonBody</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>dataForUpdateExisitingRecords</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -282,6 +298,18 @@
 <td>createData</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>getIDData</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>updateRecord</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>updateSpecificData</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
@@ -290,6 +318,14 @@
 <tr>
 <td>&nbsp;</td>
 <td>jsonBody</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>dataForUpdateExisitingRecords</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>dataForUpdate</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
