--- a/APITestReport/old/Default suite/classes.html
+++ b/APITestReport/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.API_Testing.TestCasesScripts.TC_01_PostMethods</td>
+<td>com.API_Testing.TestCasesScripts.TC_02_GetPerticulerIddata</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,6 +12,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>createData</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getIDData</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
